[package]
name = "basalto-library"
version = "0.7.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
basalto-shared = { git = "ssh://git@github.com/ShadeC0der/basalto-shared.git", tag = "v1.2.0" }
dirs = "6"
serde = { version = "1", features = ["derive"] }
toml = "1"
dialoguer = "0.11"
